added testcases to RaceStrategyOptimiserTest